Updated the css for fixing the products details page alignment of products content.

--- a/app/design/frontend/Alothemes/default/web/css/styles.css
+++ b/app/design/frontend/Alothemes/default/web/css/styles.css
@@ -1894,15 +1894,35 @@ font-size: 12px;
 /*detail product / view product*/
 .box-tocart .fieldset .actions .tocart span{display: inline-block; font-size: 14px;}
 .product-info-main .page-title-wrapper .page-title{margin: 0}
-.product-info-main .page-title-wrapper .page-title span{font-size: 25px; color: #333e48; font-weight: normal; display: block; line-height: 30px; text-align: left;margin-bottom: 15px;}
+
+.product-info-main .page-title-wrapper .page-title span {
+    font-size: 20px;
+    color: #333;
+    font-weight: normal;
+    display: block;
+    line-height: 30px;
+    text-align: left;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
 .product-essential .product-media, .product-essential .product-info-main{float: left; padding: 0 15px}
 .product-essential .product-media{width: 45%}
 
 .product-essential .product-info-main{width: 55%}
 .product-reviews-summary .rating-summary, .product-reviews-summary .reviews-actions{display: inline-block;position: relative;text-align: left;vertical-align: middle;}
 .product-info-main .product-reviews-summary{margin-top: 7px}
-.product-info-main .product-info-stock-sku{margin-top: 13px; margin-bottom: 18px}
-.product-essential .product-info-main .price-box{padding-top: 12px}
+
+.product-info-main .product-info-stock-sku {
+    margin-top: 13px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 5px;
+}
+
+.product-essential .product-info-main .price-box {
+    padding-top: 0px;
+}
 
 .product-essential .stock label{font-size: 13px; color: #8f8e94; text-transform: capitalize;}
 .product-essential .stock span{font-size: 13px; color: #5bb300; text-transform: capitalize;}
@@ -1915,7 +1935,12 @@ font-size: 12px;
 
 .product-info-main .attibute ul li{font-size: 12px; color: #7d7d7d; font-weight: normal; margin: 5px 0; line-height: 15px; position: relative; padding-left: 12px}
 .product-info-main .attibute ul li:before{content: ""; width: 4px; height: 4px; position: absolute; left: 0; bottom: 3px; background-color: #7d7d7d; border-radius: 50%;}
-.product-info-main .price-box .price-wrapper .price{font-size: 35px; color: #333e48; font-weight: normal;}
+
+.product-info-main .price-box .price-wrapper .price {
+    font-size: 22px;
+    color: #333e48;
+    font-weight: normal;
+}
 
 .product-info-main .price-box .old-price .price-wrapper .price{font-size: 14px; color: #848484}
 .product-info-main .price-box .special-price, .product-info-main .price-box .old-price{display: inline-block; vertical-align: middle; margin: 0}
@@ -1980,7 +2005,11 @@ font-size: 12px;
 /*grouped product*/
 .product-info-main .table.grouped .product-item-name{display: block;font-weight: normal; text-align: left;margin: 0; }
 .product-info-main .table.grouped .price-box .price-wrapper .price{font-size: 15px; line-height: 20px}
-.product-essential .product-info-main .price-box{line-height: normal;}
+.product-essential .product-info-main .price-box {
+    line-height: normal;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
 
 /* Rating */
 .ratings-table th,.ratings-table td{font-size:11px;line-height:1.15;padding:3px 0}
